--- a/Zbang.Zbox.Infrastructure.Mail/Zbang.Zbox.Infrastructure.Mail.csproj
+++ b/Zbang.Zbox.Infrastructure.Mail/Zbang.Zbox.Infrastructure.Mail.csproj
@@ -110,6 +110,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EmailResource.resx</DependentUpon>
     </Compile>
+    <Compile Include="SpamGunMail.cs" />
+    <Compile Include="SpamGunMailParams.cs" />
     <Compile Include="UniversityLowActivityMail.cs" />
     <Compile Include="UniversityLowActivityMailParams.cs" />
     <Compile Include="UpdateMailParams.cs" />
