More theme fixes

--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1386,10 +1386,9 @@
     <Content Include="Images\HomePage2\HP_image.jpg" />
     <Content Include="Images\HomePage2\infographics_en.png" />
     <Content Include="Images\HomePage2\infographics_he.png" />
-    <Content Include="Images\Site\create_uni_b.png" />
+    <Content Include="Images\Site\create_uni.png" />
     <Content Include="Images\Site\create_uni_text.png" />
     <Content Include="Images\Site\create_uni_text_white.png" />
-    <Content Include="Images\Site\create_uni_w.png" />
     <Content Include="Images\Site\logo_spitball.png" />
     <Content Include="Audio\message.mp3" />
     <Content Include="Images\Site\no_search_results.png" />
