--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -672,6 +672,7 @@
     <Content Include="bower_components\ui-router-extras\umd.js" />
     <Content Include="Content\angular-material.css" />
     <Content Include="Content\angular-material.layout-attributes.css" />
+    <Content Include="Content\angular-material.layout-attributes.min.css" />
     <Content Include="Content\angular-material.layouts.css" />
     <Content Include="Content\angular-material.layouts.ie_fixes.css" />
     <Content Include="Content\angular-material.layouts.min.css" />
@@ -1385,9 +1386,10 @@
     <Content Include="Images\HomePage2\HP_image.jpg" />
     <Content Include="Images\HomePage2\infographics_en.png" />
     <Content Include="Images\HomePage2\infographics_he.png" />
-    <Content Include="Images\Site\create_uni.png" />
+    <Content Include="Images\Site\create_uni_b.png" />
     <Content Include="Images\Site\create_uni_text.png" />
     <Content Include="Images\Site\create_uni_text_white.png" />
+    <Content Include="Images\Site\create_uni_w.png" />
     <Content Include="Images\Site\logo_spitball.png" />
     <Content Include="Audio\message.mp3" />
     <Content Include="Images\Site\no_search_results.png" />
@@ -1512,6 +1514,7 @@
     <Content Include="Js\signin\staticPages.js" />
     <TypeScriptCompile Include="Js\app.config.ts" />
     <TypeScriptCompile Include="Js\components\app.controller.ts" />
+    <TypeScriptCompile Include="Js\components\box\box.controller.ts" />
     <TypeScriptCompile Include="Js\components\chat\chat.controller.ts" />
     <TypeScriptCompile Include="Js\components\chat\chat.factory.ts" />
     <TypeScriptCompile Include="Js\components\chat\chatTimeAgo.ts" />
@@ -2340,7 +2343,6 @@
     <Content Include="Js\components\box\box.service.js" />
     <Content Include="Js\components\box\quizzes.controller.js" />
     <Content Include="Js\components\box\members.controller.js" />
-    <Content Include="Js\components\box\box.controller.js" />
     <Content Include="Js\components\box\feed.controller.js" />
     <Content Include="Js\components\box\item.controller.js" />
     <Content Include="Js\components\box\recommended.controller.js" />
