--- a/Zbang.Cloudents.Mvc4WebRole/cdn/Web.config
+++ b/Zbang.Cloudents.Mvc4WebRole/cdn/Web.config
@@ -10,6 +10,8 @@
       <customHeaders>
         <remove name="Access-Control-Allow-Origin" />  
         <add name="Access-Control-Allow-Origin" value="*" />
+        <remove name="Access-Control-Allow-Headers"/>
+        <add name="Access-Control-Allow-Headers" value="X-Requested-With"/>
         <remove name="Strict-Transport-Security" />
         <add name="Strict-Transport-Security" value="max-age=0" />
       </customHeaders>
