--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -352,6 +352,7 @@
     <Compile Include="Helpers\CookieHelper.cs" />
     <Compile Include="Helpers\CookieTempDataProvider.cs" />
     <Compile Include="Helpers\CustomCacheKeys.cs" />
+    <Compile Include="Helpers\ICookieHelper.cs" />
     <Compile Include="Helpers\ILanguageCookieHelper.cs" />
     <Compile Include="Helpers\JsonResponse.cs" />
     <Compile Include="Helpers\JsResourceHelper.cs" />
