Several bug fixes.

--- a/Zbang.Cloudents.Connect/Web.config
+++ b/Zbang.Cloudents.Connect/Web.config
@@ -100,7 +100,7 @@
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://cloudentshub-ns.servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
   </appSettings>
   <connectionStrings>
-    <add name="ZBox" connectionString="Data Source=(local);Initial Catalog=Zbox;Integrated Security=SSPI;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="ZBox" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Zbox;Integrated Security=SSPI;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <httpProtocol>
