--- a/Zbang.Cloudents.Mvc4WebRole/Web.config
+++ b/Zbang.Cloudents.Mvc4WebRole/Web.config
@@ -82,7 +82,7 @@
           <add name="PartialPage" duration="1" location="ServerAndClient" varyByParam="lang;version" />
           <add name="FullPage" duration="1" varyByParam="none" varyByCustom="Auth;Lang" />
           <!-- We can do any but then we need to fix the inject cookie -->
-          <add name="HomePage" duration="999" varyByParam="invId;universityName;step" varyByCustom="Auth;Lang;Uni" location="Server" />
+          <add name="HomePage" duration="1" varyByParam="invId;universityName;step" varyByCustom="Auth;Lang;Uni" location="Server" />
           <add name="ItemPage" duration="1" varyByParam="itemid" varyByCustom="Auth;Lang" location="Server" />
           <add name="BoxPage" duration="1" varyByParam="boxId;part" varyByCustom="Auth;Lang" location="Server" />
         </outputCacheProfiles>
@@ -235,6 +235,14 @@
         <assemblyIdentity name="Autofac.Integration.Owin" publicKeyToken="17863af14b0044da" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
+        <dependentAssembly>
+    
+            <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+    
+            <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+    
+        </dependentAssembly>
+    
     </assemblyBinding>
   </runtime>
   <entityFramework>
